# topsis

part-1/: data.csv  result.csv  topsis.py
part-2/: LICENSE  README.rmd  pyproject.toml
part-2/topsis-akshit-102317091/: __init__.py  grades.py  performance.py  utils.py
part3/: app.py  topsis_program.py
part3/templates/: index.html
part3/uploads/: data.csv  result.csv
